# sniffs

./: .gitignore  LICENSE  README.md  default.nix  flake.nix  pyproject.toml
.github/workflows/: run-tests.yaml
sniffs/: __init__.py  fixture.py  router.py  sniffs.py
tests/: test_fixture.py  test_router.py
