[tool.poetry]
name = "sniffs"
version = "0.4.0"
description = ""
authors = ["surdouski <michael.surdouski@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.1.1"
frozendict = "^2.4.0"
paho-mqtt = "^2.0.0"


[tool.poetry.group.dev.dependencies]
ipython = "^8.22.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
