[tool.poetry]
name = "sniffs"
version = "0.6.3"
description = ""
authors = ["surdouski <michael.surdouski@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.1.1"
paho-mqtt = "1.6.1"


[tool.poetry.group.dev.dependencies]
ipython = "^8.22.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
